--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -13,7 +13,7 @@
 	<div id="log-in-div" class="card border-primary mx-auto my-3 justify-content-center">
 		<div id="log-in-card" class="card-body">
 
-			<form id="log-in-form" method="post" class="m-auto">
+			<form id="log-in-form" method="post" class="mx-auto">
 
 				{% csrf_token %}
 
