--- a/templates/account/my_account.html
+++ b/templates/account/my_account.html
@@ -10,7 +10,7 @@
 <div id="my-accnt-form-container" class="container-fluid mx-auto mb-5 pb-5 justify-content-center">
   <h2 id="my-accnt-header" class="mx-auto my-3 text-center">My Account</h2>
 
-  <div id="my-accnt-div" class="card border-primary m-auto mb-3">
+  <div id="my-accnt-div" class="card border-primary m-auto mb-5 pb-5">
     <div id="my-accnt-card" class="card-body">
 
       <!-- Commenting out Avatar code for now because it's not part of the Final Project instructions. 
