--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -10,7 +10,7 @@
 <div id="change-pswd-form-container" class="container-fluid mx-auto mb-5 pb-5 justify-content-center">
   <h2 id="change-pswd-form-header" class="mx-auto my-3 text-center">Change Password</h2>
 
-  <div id="change-pswd-form-div" class="card border-primary m-auto mb-3">  
+  <div id="change-pswd-form-div" class="card border-primary mx-auto mb-3">  
     <div id="change-pswd-form-card" class="card-body">
       <form id="change-pswd-form" method="post" action="{% url 'account_change_password' %}">
         {% csrf_token %}
