--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -8,7 +8,7 @@
 <div id="about-us-container" class="container-fluid mx-auto mb-5 pb-5 justify-content-center">
   <h2 id="about-us-header" class="mx-auto my-3 text-center">About Us</h2>
 
-  <div id="about-us-div" class="card border-primary mx-auto my-3 justify-content-center">
+  <div id="about-us-div" class="card border-primary mx-3 my-3 justify-content-center">
 		<div id="about-us-card" class="card-body">
       This project is for my enrollment in <strong>North Shore Community College's</strong> (Danvers, MA) 
       <strong>Full Stack Developer Certificate</strong> program.  While the math and literacy games on this 
