--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -7,16 +7,16 @@
 {% endblock %}
 
 {% block main %}
-<h2 id="contact-form-header" class="mx-auto mt-3 mb-1 text-center">
-  Contact Us</h2>
+<div id="contact-form-container" class="container-fluid mx-auto mt-1 mb-5 p-3 pb-5">
 
-<div id="contact-form-container" class="container-fluid mt-1 mb-5 p-3">
+  <h2 id="contact-form-header" class="mx-auto my-3 text-center">Contact Us</h2>
+
   <p id="contact-disclaimer-msg" class="mx-auto mt-0 mb-4 text-center">
     Pleas note, this website is a college (North Shore Community College in MA) student project.
     While you are welcome to send us questions or comments, regretfully, we cannot respond.
   </p>
 
-  <div id="contact-form-div" class="card border-primary m-auto mb-5 p-3">
+  <div id="contact-form-div" class="card border-primary mx-2 mb-5 p-3">
     <form id="contact-form" method="post" class="form" novalidate>
 
       {% csrf_token %}
