--- a/templates/games/ah-leaderboard.html
+++ b/templates/games/ah-leaderboard.html
@@ -9,7 +9,7 @@
   <h2 id="ah-leaderboard-heading" class="mx-auto mt-3 mb-0 text-center">Anagram Hunt Leaderboard</h2>
 
     {% if anagram_scores %}
-      <table id="ah-leaderboard-tbl" class="table table-striped table-hover mx-auto my-2 border">
+      <table id="ah-leaderboard-tbl" class="table table-striped table-hover mx-auto my-2">
         <thead class="table-primary">
           <tr>
             <th id="ah-rank-header">Rank</th>
