--- a/templates/games/mf-leaderboard.html
+++ b/templates/games/mf-leaderboard.html
@@ -9,7 +9,7 @@
   <h2 id="mf-leaderboard-heading" class="mx-auto mt-3 mb-0 text-center">Math Facts Leaderboard</h2>
 
     {% if math_scores %}
-      <table id="mf-leaderboard-tbl" class="table table-striped table-hover mx-auto my-2 border">
+      <table id="mf-leaderboard-tbl" class="table table-striped table-hover mx-auto my-2">
         <thead class="table-primary">
           <tr>
             <th id="mf-rank-header">Rank</th>
