--- a/templates/pages/contact-thanks.html
+++ b/templates/pages/contact-thanks.html
@@ -3,18 +3,18 @@
 {% block title %}Feedback: Review Submitted{% endblock %}
 
 {% block main %}
-  <h2 id="contact-submitted-header" class="mx-auto mt-3 mb-1 text-center">
+<div id="contact-thx-container" class="container-fluid mx-auto mt-1 mb-5 p-3 pb-5">
+  <h2 id="contact-submitted-header" class="mx-auto my-3 text-center">
     Contact Us Form Submitted</h2>
 
-  <div id="contact-thx-container" class="container-fluid mt-1 mb-5 p-3">
-    <div id="contact-submitted-div" class="card border-primary mx-auto mb-3 p-3 text-center"> 
-
+  
+    <div id="contact-submitted-div" class="card border-primary mx-3 mb-3 p-3 text-center"> 
       <p id="contact-submitted-msg" class="m-auto">
         Thanks! For sending us comments or questions. <br />
         Pleas note, this website is a college (North Shore Community College in MA) student project.<br/>
         Unfortunately, we can't respond to comments or questions.
       </p>
-
     </div>
-  </div>
+
+</div>
 {% endblock %}
