--- a/templates/reviews/review-form.html
+++ b/templates/reviews/review-form.html
@@ -7,16 +7,17 @@
 {% endblock %}
 
 {% block main %}
-<h2 id="review-form-header" class="mx-auto mt-3 mb-1 text-center">
-  Feedback: Write a Review</h2>
+<div id="review-form-container" class="container-fluid mx-auto mt-1 mb-5 p-3 pb-5">
+  <h2 id="review-form-header" class="mx-auto my-3 text-center">
+    Feedback: Write a Review</h2>
 
-<div id="review-form-container" class="container-fluid mt-1 mb-5 p-3">
-  <p id="review-disclaimer-msg" class="mx-auto mt-0 mb-4 text-center">
+
+  <p id="review-disclaimer-msg" class="mx-3 mt-0 mb-4 text-center">
     Pleas note, your review may be published on our home page. <br />
     If our team has questions, we may reach out to you via the email address provided.
   </p>
 
-  <div id="review-form-div" class="card border-primary m-auto mb-5 p-3">
+  <div id="review-form-div" class="card border-primary mx-3 mb-5 p-3">
     <form id="review-form" method="post" class="form" novalidate>
 
       {% csrf_token %}
@@ -27,5 +28,6 @@
         alt="Submit Button: Press to submit your review">Submit</button>
     </form>
   </div>
+
 </div>
 {% endblock %}
