homepg-reviews: Copy/verbiage tweaks

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -25,8 +25,8 @@
 
         <div id="ah-descrip" class="card-body">
           <p class="card-text text-center">
-            A simple anagram game to challenge your word skills. 
-            How many anagrams can you find in a minute?
+            A challenging anagram game to test your spelling skills. 
+            How many anagrams can you find in 60 seconds?
           </p>
         </div>
       </div>
@@ -43,8 +43,8 @@
 
         <div id="mf-descrip" class="card-body">
           <p class="card-text text-center">
-            A simple arithmetic game to sharpen your math skills.
-            How many equations can you solve in a minute?
+            A simple math game to sharpen your arithmetic skills.
+            How many equations can you solve in 60 seconds?
           </p>
         </div>
       </div>
