--- a/templates/games/ah-leaderboard.html
+++ b/templates/games/ah-leaderboard.html
@@ -23,10 +23,9 @@
         <tbody>
           {% for score in anagram_scores %}
           <tr>
-            <td id="ah-rank-{{forloop.counter0|add:page_obj.start_index}}">
-              {{ forloop.counter0|add:page_obj.start_index }}</td>   
-            <td id="ah-player-rank-{{forloop.counter0|add:page_obj.start_index}}">
-              {{ score.player.username }}</td>
+            <!-- forloop.counter0|add:page_obj.start_index -->
+            <td id="ah-rank-{{score.rank}}">{{ score.rank }}</td>   
+            <td id="ah-player-rank-{{score.rank}}">{{ score.player.username }}</td>
             <td id="ah-score-num-{{score.id}}">{{ score.final_score }}</td>
             <td id="ah-datetime-{{score.id}}">{{ score.game_date_time }}</td>
             <td id="ah-settings-{{score.id}}">  
